--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div>
         <h2>My pets</h2>
         <p>I have two cats, one named peakabo and the other obi. And one dog named Kermie.</p>
-        <img src="img/cat.png" alt="a cat">
+        <img src="img/cat.jpg" alt="a cat">
       </div>
       <div>
         <h2>About Me</h2>
