--- a/hobby.html
+++ b/hobby.html
@@ -236,6 +236,7 @@
     <div class="navbar">
       <a href="index.html">Home</a>
       <a href="hobby.html">Hobbies</a>
+      <a href="pricing.html">Pricing</a>
     </div>
     <div class="backdrop">
       <h1 id="title" class="bg-text">Project Car</h1>
