--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <div class="navbar">
       <a href="index.html">Home</a>
       <a href="hobby.html">Hobbies</a>
+      <a href="pricing.html">Pricing</a>
     </div>
     <h1 class="backdrop">Oliver Website</h1>
     <div class="flex-container">
