--- a/hobby.html
+++ b/hobby.html
@@ -237,6 +237,7 @@
       <a href="index.html">Home</a>
       <a href="hobby.html">Hobbies</a>
       <a href="pricing.html">Pricing</a>
+      <a href="photoshoot.html">Pricing</a>
     </div>
     <div class="backdrop">
       <h1 id="title" class="bg-text">Project Car</h1>
