--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <a href="index.html">Home</a>
       <a href="hobby.html">Hobbies</a>
       <a href="pricing.html">Pricing</a>
-      <a href="photoshoot.html">Pricing</a>
+      <a href="photoshoot.html">Photoshoot</a>
     </div>
     <h1 class="backdrop">Oliver Website</h1>
     <div class="flex-container">
