--- a/hobby.html
+++ b/hobby.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
     <style>
       /* img {
             width:50%;
@@ -120,6 +122,15 @@
         text-align: center;
       }
 
+      /* .navbar {
+        overflow: hidden;
+        background-color: #333;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+      } */
+
       .navbar {
         overflow: hidden;
         background-color: #333;
@@ -128,16 +139,16 @@
         width: 100%;
         z-index: 1;
       }
-
       .navbar a {
-        float: left;
+        /* float: left; */
         display: block;
         color: #f2f2f2;
         text-align: center;
-        padding: 14px 16px;
+        /* padding: 14px 16px; */
         text-decoration: none;
         font-size: 17px;
       }
+
 
       .navbar a:hover {
         background: #ddd;
@@ -196,10 +207,11 @@
       .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         transition: 0.3s;
-        width: 30%;
+        width: 100%;
         margin-left: 2.5%;
         margin-bottom: 5%;
       }
+
 
       .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -230,19 +242,62 @@
       .end {
         margin-bottom: 10%;
       }
+      .fixed {
+        background-color: whitesmoke;
+        border-radius: 1%;
+        width: 30%;
+        margin-left: 10%;
+        text-align: center;
+        line-height: 25px;
+        font-size: 20px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+        padding-top: 2.5%;
+      }
     </style>
   </head>
   <body>
-    <div class="navbar">
+    <!-- <div class="navbar">
       <a href="index.html">Home</a>
       <a href="hobby.html">Hobbies</a>
       <a href="pricing.html">Pricing</a>
       <a href="photoshoot.html">Photoshoot</a>
+    </div> -->
+
+
+    <div class="navbar">
+      <div class="w3-row">
+        <div class="w3-col w3-container  l2">
+          <a href="index.html">Home</a>         
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="hobby.html">Hobbies</a>
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="pricing.html">Pricing</a>
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="photoshoot.html">Photoshoot</a>
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="contact.html">Contact</a>
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="steps.html">Steps</a>
+        </div>
+      </div>
+
     </div>
+
+
+
+
     <div class="backdrop">
       <h1 id="title" class="bg-text">Project Car</h1>
     </div>
-    <div class="flex-container">
+
+    <!-- <div class="flex-container">
       <div>
         <h2>About My Car</h2>
         <p>Currently my car is pushing around 280hp, the ECU is protuned by cobb. While the rest of engine work was done by me. Other than that I've done, headlights, taillights, and foglights. Im currently running BC Racing coilovers</p>
@@ -258,15 +313,52 @@
           <img class="photos" src="img/cobb.png" alt="cobb Acessport">
         </div>
       </div>
+
+
       <div>
         <h2>Future Modifications</h2>
         <p>In the future I would like to do a full engine build/internals before I push more power at it do to cars unreliablity with high power. I would hope to do atleast a short block with supporting mods. From there I can start looking into doing high power required modifications.</p>
         <img src="img/block.jpg" alt="short block">
       </div>
+    </div> -->
+
+    <div class="w3-row">
+      <div class="w3-col w3-container s12 m8 l4 fixed">
+
+        <div>
+          <h2>About My Car</h2>
+          <p>Currently my car is pushing around 280hp, the ECU is protuned by cobb. While the rest of engine work was done by me. Other than that I've done, headlights, taillights, and foglights. Im currently running BC Racing coilovers</p>
+          <h3>Engine Bolt ons</h3>
+          <div class="flexy">
+            <ul class="list">
+              <li>Cobb Acessport</li>
+              <li>ETS Intake</li>
+              <li>Cobb Bypass Valve</li>
+              <li>Perrin turbo inlet</li>
+              <li>Cobb Boost Controller</li>
+            </ul>
+            <img class="photos" src="img/cobb.png" alt="cobb Acessport">
+          </div>
+        </div>
+  
+      </div>
+      <div class="w3-col w3-container s12 m8 l4 fixed">  
+        <div>
+          <h2>Future Modifications</h2>
+          <p>In the future I would like to do a full engine build/internals before I push more power at it do to cars unreliablity with high power. I would hope to do atleast a short block with supporting mods. From there I can start looking into doing high power required modifications.</p>
+          <img src="img/block.jpg" alt="short block">
+        </div>
+      </div>
     </div>
+
+
+
+
     <div class="photography">
+      
       <h1 class="exmaples">Car Photography</h1>
-      <div id="pictures">
+           <!-- <div id="pictures">
+
         <div class="card">
           <img src="img/beama.jpg" style="width: 100%; margin-left:auto;" alt="beama">
           <div class="container">
@@ -276,6 +368,7 @@
             <p>Shot at BAEZ Meet 206 Ballardvale st Wilmington MA</p>
           </div>
         </div>
+
         <div class="card">
           <img src="img/IMG_0354.jpg" style="width: 100%; margin-left:auto;" alt="supra">
           <div class="container">
@@ -283,6 +376,7 @@
             <p>Shot at BAEZ Meet 206 Ballardvale st Wilmington MA</p>
           </div>
         </div>
+
         <div class="card">
           <img src="img/IMG_0375.jpg" style="width: 100%; margin-left:auto;" alt="wrx">
           <div class="container">
@@ -290,10 +384,47 @@
             <p>Shot in Arms Park in Manchester NH</p>
           </div>
         </div>
+
+      </div> -->
+      <div class="w3-row">
+        <div class="w3-col w3-container s12 m12 l4">
+          <div class="card">
+            <img src="img/beama.jpg" style="width: 100%; margin-left:auto;" alt="beama">
+            <div class="container">
+              <h4>
+                <b>Beemer</b>
+              </h4>
+              <p>Shot at BAEZ Meet 206 Ballardvale st Wilmington MA</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="w3-col w3-container s12 m12 l4">  
+          <div class="card">
+            <img src="img/IMG_0354.jpg" style="width: 100%; margin-left:auto;" alt="supra">
+            <div class="container">
+              <h4>MK5 Supra</h4>
+              <p>Shot at BAEZ Meet 206 Ballardvale st Wilmington MA</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="w3-col w3-container s12 m12 l4">
+          <div class="card">
+            <img src="img/IMG_0375.jpg" style="width: 100%; margin-left:auto;" alt="wrx">
+            <div class="container">
+              <h4>Evo Eye WRX</h4>
+              <p>Shot in Arms Park in Manchester NH</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
+
+
     
-    <div class="flex-container end">
+    <!-- <div class="flex-container end">
       <div>
         <h2>Current Setup</h2>
         <p>I am currently using a canon g16 camera for my photography. I often enjoy taking photos of my car, friends cars and random peoples cars I meet at car meets.</p>
@@ -309,6 +440,30 @@
           </li>
         </ul>
       </div>
+    </div> -->
+
+    <div class="w3-row">
+      <div class="w3-col w3-container s12 m8 l4 fixed">
+        <div>
+          <h2>Current Setup</h2>
+          <p>I am currently using a canon g16 camera for my photography. I often enjoy taking photos of my car, friends cars and random peoples cars I meet at car meets.</p>
+          <img style="width: 60%;" src="img/g16.png" alt="g16 camera">
+        </div>
+      </div>
+
+      <div class="w3-col w3-container s12 m8 l4 fixed">  
+        <div>
+          <h2>Photography Inquiries</h2>
+          <ul class="inquiries">
+            <li>Oliver Contact</li>
+            <li>(603)673-4001</li>
+            <li>
+              <a href="mailto:ojm1033@usnh.edu.com">ojm1033@usnh.edu.com</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+
   </body>
 </html>
