--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
       img {
         width: 30%;
@@ -56,6 +57,14 @@
             padding-bottom: 2%;
 
         } */
+      /* .navbar {
+        overflow: hidden;
+        background-color: #333;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+      } */
       .navbar {
         overflow: hidden;
         background-color: #333;
@@ -64,13 +73,12 @@
         width: 100%;
         z-index: 1;
       }
-
       .navbar a {
-        float: left;
+        /* float: left; */
         display: block;
         color: #f2f2f2;
         text-align: center;
-        padding: 14px 16px;
+        /* padding: 14px 16px; */
         text-decoration: none;
         font-size: 17px;
       }
@@ -108,40 +116,96 @@
       .split {
         width: 50%;
       }
+      .fix {
+        background-color: whitesmoke;
+        border-radius: 1%;
+
+        margin-left: 10%;
+        text-align: center;
+        line-height: 25px;
+        font-size: 20px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+        padding-top: 2.5%;
+      }
     </style>
   </head>
   <body>
-    <div class="navbar">
+    <!-- <div class="navbar">
       <a href="index.html">Home</a>
       <a href="hobby.html">Hobbies</a>
       <a href="pricing.html">Pricing</a>
       <a href="photoshoot.html">Photoshoot</a>
-    </div>
-    <h1 class="backdrop">Oliver Website</h1>
-    <div class="flex-container">
-      <div>
-        <h2>My pets</h2>
-        <p>I have two cats, one named peakabo and the other obi. And one dog named Kermie.</p>
-        <img src="img/cat.jpg" alt="a cat">
-      </div>
-      <div>
-        <h2>About Me</h2>
-        <div class="flexy">
-          <div class="split">
-            <p>Hello my names Oliver, im from bedford nh. For pets I have two cats and a dog. Some of my hobbies include,</p>
-          </div>
-          <div class="split">
-            <ol>
-              <li>Photography</li>
-              <li>Music Production</li>
-              <li>Bmx</li>
-              <li>Working on my Project Car</li>
-            </ol>
-          </div>
+    </div> -->
+    
+
+    <div class="navbar">
+      <div class="w3-row">
+        <div class="w3-col w3-container  l2">
+          <a href="index.html">Home</a>         
         </div>
-        <h3>Picture of my friends car I took.</h3>
-        <img src="img/jack.jpeg" alt="My buddies VW">
+        <div class="w3-col w3-container l2">  
+          <a href="hobby.html">Hobbies</a>
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="pricing.html">Pricing</a>
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="photoshoot.html">Photoshoot</a>
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="contact.html">Contact</a>
+        </div>
+        <div class="w3-col w3-container l2">  
+          <a href="steps.html">Steps</a>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+    </div>
+
+
+
+
+
+    <h1 class="backdrop">Oliver Website</h1>
+
+
+
+
+    <div class="w3-row">
+      <div class="w3-col w3-container s12 m8 l4 fix">
+        <div>
+          <h2>My pets</h2>
+          <p>I have two cats, one named peakabo and the other obi. And one dog named Kermie.</p>
+          <img src="img/cat.jpg" alt="a cat">
+        </div>
+      </div>
+
+      <div class="w3-col w3-container s12 m8 l4 fix">  
+        <div>
+          <h2>About Me</h2>
+          <div class="flexy">
+            <div class="split">
+              <p>Hello my names Oliver, im from bedford nh. For pets I have two cats and a dog. Some of my hobbies include,</p>
+            </div>
+            <div class="split">
+              <ol>
+                <li>Photography</li>
+                <li>Music Production</li>
+                <li>Bmx</li>
+                <li>Working on my Project Car</li>
+              </ol>
+            </div>
+          </div>
+          <h3>Picture of my friends car I took.</h3>
+          <img src="img/jack.jpeg" alt="My buddies VW">
+        </div>
       </div>
     </div>
+    
   </body>
 </html>
