--- a/photoshoot.html
+++ b/photoshoot.html
@@ -42,13 +42,14 @@
         background-image: url(img/vw/IMG_9669.jpg);
         /* filter: blur(6px);
             -webkit-filter: blur(6px); */
+        
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
         padding-top: 15%;
         padding-bottom: 20%;
         font-size: 600%;
-        background-position-y: -300px;
+        background-position-y: -600px;
         color: white;
         z-index: 2;
         box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.386), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -86,15 +87,15 @@
             -webkit-filter: blur(0px); */
         color: white;
       }
-
+      
       .bg-text {
-        background-color: rgb(0, 0, 0);
+        /* background-color: rgb(0, 0, 0); */
         /* Fallback color */
-        background-color: rgba(0, 0, 0, 0.4);
+        /* background-color: rgba(0, 0, 0, 0.4); */
         /* Black w/opacity/see-through */
         color: white;
         font-weight: bold;
-        border: 3px solid #f1f1f1;
+
         position: absolute;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -104,6 +105,14 @@
         text-align: center;
       }
 
+      /* .navbar {
+        overflow: hidden;
+        background-color: #333;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+      } */
       .navbar {
         overflow: hidden;
         background-color: #333;
@@ -112,21 +121,16 @@
         width: 100%;
         z-index: 1;
       }
-
       .navbar a {
-        float: left;
+        /* float: left; */
         display: block;
         color: #f2f2f2;
         text-align: center;
-        padding: 14px 16px;
+        /* padding: 14px 16px; */
         text-decoration: none;
         font-size: 17px;
       }
 
-      .navbar a:hover {
-        background: #ddd;
-        color: black;
-      }
     .columns {
     float: left;
     width: 100%;
@@ -184,12 +188,40 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <!-- <div class="navbar">
         <a href="index.html">Home</a>
         <a href="hobby.html">Hobbies</a>
         <a href="pricing.html">Pricing</a>
         <a href="photoshoot.html">Photoshoot</a>
+      </div> -->
+
+      <div class="navbar">
+        <div class="w3-row">
+          <div class="w3-col w3-container  l2">
+            <a href="index.html">Home</a>         
+          </div>
+          <div class="w3-col w3-container l2">  
+            <a href="hobby.html">Hobbies</a>
+          </div>
+          <div class="w3-col w3-container l2">  
+            <a href="pricing.html">Pricing</a>
+          </div>
+          <div class="w3-col w3-container l2">  
+            <a href="photoshoot.html">Photoshoot</a>
+          </div>
+          <div class="w3-col w3-container l2">  
+            <a href="contact.html">Contact</a>
+          </div>
+          <div class="w3-col w3-container l2">  
+            <a href="steps.html">Steps</a>
+          </div>
+        </div>
+  
       </div>
+  
+  
+
+
       <div class="backdrop">
         <h1 id="title" class="bg-text">PhotoShoot Examples</h1>
       </div>
@@ -221,6 +253,10 @@
       </div>
     <!-- End photo grid -->
     </div>
+    <div class="grey">
+      <h2>Location</h2>
+      <p>All photos for this shoot took place near and around the kancamagus highway up to mt washington.</p>
+  </div>
   <!-- End Portfolio Section -->
   </div>
 </body>
